[251127] 키워드 추출 검토 추가

--- a/test.ipynb
+++ b/test.ipynb
@@ -164,10 +164,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "python tools/main_pipeline.py --steps evaluate_exams --eval_sets 5 --eval_models google/gemini-2.5-pro openai/gpt-5 anthropic/claude-sonnet-4.5 google/gemini-2.5-flash anthropic/claude-3.7-sonnet openai/gpt-4.1"
    ]
@@ -619,49 +621,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "================================================================================\n",
-      "정확도 결과 출력 (20개 파일)\n",
-      "================================================================================\n",
-      "\n",
-      "차수       모델명                                                정확도            \n",
-      "--------------------------------------------------------------------------------\n",
-      "1st      anthropic/claude-3.7-sonnet                        0.3160         \n",
-      "1st      anthropic/claude-sonnet-4.5                        0.3580         \n",
-      "1st      google/gemini-2.5-flash                            0.3497         \n",
-      "1st      openai/gpt-4.1                                     0.3290         \n",
-      "2nd      anthropic/claude-3.7-sonnet                        0.3390         \n",
-      "2nd      anthropic/claude-sonnet-4.5                        0.3840         \n",
-      "2nd      google/gemini-2.5-flash                            0.3574         \n",
-      "2nd      openai/gpt-4.1                                     0.3290         \n",
-      "3rd      anthropic/claude-3.7-sonnet                        0.3310         \n",
-      "3rd      anthropic/claude-sonnet-4.5                        0.3524         \n",
-      "3rd      google/gemini-2.5-flash                            0.3647         \n",
-      "3rd      openai/gpt-4.1                                     0.3410         \n",
-      "4th      anthropic/claude-3.7-sonnet                        0.3550         \n",
-      "4th      anthropic/claude-sonnet-4.5                        0.3500         \n",
-      "4th      google/gemini-2.5-flash                            0.3558         \n",
-      "4th      openai/gpt-4.1                                     0.3624         \n",
-      "5th      anthropic/claude-3.7-sonnet                        0.3250         \n",
-      "5th      anthropic/claude-sonnet-4.5                        0.3720         \n",
-      "5th      google/gemini-2.5-flash                            0.3410         \n",
-      "5th      openai/gpt-4.1                                     0.3480         \n",
-      "--------------------------------------------------------------------------------\n",
-      "\n",
-      "총 20개 결과 출력 완료\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_accuracy_results('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/8_multiple_exam_+/exam_+_result')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# essay_questions_w_keyword 검수"
    ]
   },
   {
@@ -669,7 +640,88 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!python tools/transformed/essay_change_question_to_essay.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python tools/transformed/essay_extract_keywords.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, json\n",
+    "from tools import ONEDRIVE_PATH\n",
+    "essay_dir = os.path.join(ONEDRIVE_PATH, 'evaluation', 'eval_data', '9_multiple_to_essay', 'questions')\n",
+    "\n",
+    "file = json.load(open(os.path.join(essay_dir, 'essay_questions_w_keyword_1st_서술형문제로변환.json'), 'r'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keyword가 options나 explanation에 하나라도 있으면 OK, 둘 다 없으면 오류\n",
+    "errors = []\n",
+    "\n",
+    "for item in file:\n",
+    "    keywords = [k.strip() for k in item.get('essay_keyword', '').split(',') if k.strip()]\n",
+    "    options_text = ' '.join(item.get('options', []))\n",
+    "    explanation_text = str(item.get('explanation', ''))\n",
+    "    \n",
+    "    # 각 keyword가 options나 explanation 둘 다 없는 경우만 오류\n",
+    "    missing_kw = [kw for kw in keywords if kw not in options_text and kw not in explanation_text]\n",
+    "    \n",
+    "    if missing_kw:\n",
+    "        errors.append((item, missing_kw))\n",
+    "\n",
+    "print(f\"오류: {len(errors)}개\")\n",
+    "for item, missing_kw in errors:\n",
+    "    print(f\"{'='*80}\")\n",
+    "    print(f\"ID: {item.get('file_id')}_{item.get('tag')}\")\n",
+    "    print(f\"둘 다 없는 keyword: {missing_kw}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"아래 #요청사항#을 정확하게 이해한 후, 틀림없이 #입력#에 적용하여 #출력#을 도출하시오.\n",
+    "#요청사항#\n",
+    "1. 주어진 questions 키 값이 가진 주요 주제를 먼저 식별하라.\n",
+    "2. 주어진 options은 questions 키 값을 설명하는 contents이다. answer를 참고하여 '옳지 않은' 선지(answer 1개)와 '옳은' 선지(answer외 3~4개)를 식별하라.\n",
+    "3. explanation을 참고하여 '옳지 않은' 선지(answer 1개)의 해설과 '옳은' 선지(answer외 3~4개)에서 문제의 주요 주제를 설명하기에 핵심적인 의미라고 판단되는 명사형 단어 또는 파생 명사 1개씩 추출하라.\n",
+    "4. 키워드는 1.의 주제와 겹치지 않도록 추출하라. 중복된 키워드는 제거하라. 총 5개 이내로 추출하라.\n",
+    "5. 단, 단어,표현 추출은 원문이 가진 텍스트 원본을 그대로 유지하라. 조사와 띄어쓰기 모두 반드시 유지해서 추출하라\n",
+    "    - 예1) 재화가격의 인상을 통해서\n",
+    "        올바른 추출 예시 : 재화가격의 인상\n",
+    "        틀린 추출 예시 : 재화가격 인상, 재화가격의 인상을 통해서\n",
+    "    - 예2) 소비자에게 전가될 수 있다\n",
+    "        올바른 추출 예시 : 소비자에게 전가\n",
+    "        틀린 추출 예시 : 소비자 전가\n",
+    "    - 예3) 표지를 게시하거나\n",
+    "        올바른 추출 예시 : 표지를 게시\n",
+    "        틀린 추출 예시 : 표지 게시\n",
+    "    \n",
+    "#출력 형식#\n",
+    "- 서술형 문제: 다음 키워드를 활용하여 [주제]에 관해 서술하시오.\n",
+    "- 키워드: [키워드1], [키워드2], [키워드3], [키워드4], [키워드5]\n",
+    "\n",
+    "#입력#\"\"\""
+   ]
   }
  ],
  "metadata": {
