[251128] 원시데이터 페이지 수 추출

--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -50,6 +50,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 원천페이지수\n",
+    "import tools.data_processing.epubstats as ep\n",
+    "\n",
+    "ep.check_pdf_pages(4, 'pdf_pages.xlsx')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
