--- a/workspace/재설계.ipynb
+++ b/workspace/재설계.ipynb
@@ -22,8 +22,16 @@
     "mode = '금융일반'\n",
     "\n",
     "ONEDRIVE_NEW = os.path.join(f'{ONEDRIVE_PATH}'.replace('selectstar', '데이터검수'), '재설계', '1. Q_type_label', mode)\n",
-    "origin_type = json.load(open(os.path.join(ONEDRIVE_NEW, f'E{i}_{mode}_L.json'), 'r'))"
+    "origin_type = json.load(open(os.path.join(ONEDRIVE_NEW, f'E{i}_{mode}_L2.json'), 'r'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3e60e55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
