--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -83,9 +83,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index(['ISBN', '도서명', '출판일', '코퍼스 1분류', '코퍼스 2분류', '비고', '분류'], dtype='object')"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "excel.columns"
       ]
@@ -101,7 +112,6 @@
         "import os, json\n",
         "\n",
         "# zip_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/zip/250826_1차_원천코퍼스_보완사항반영\"\n",
-        "zip_path = '/Users/jinym/Downloads/14.251124_2,3차잔여도서_원천코퍼스'\n",
         "original_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C\"\n",
         "final_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/{i}C\"\n",
         "\n",
@@ -166,6 +176,68 @@
       "outputs": [],
       "source": [
         "error_list"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 31/31 [03:00<00:00,  5.83s/it]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import shutil\n",
+        "from tqdm import tqdm\n",
+        "import os, json, time\n",
+        "\n",
+        "zip_path = '/Users/jinym/Downloads/20260103_문제집도서_60권'\n",
+        "final_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/{i}C\"\n",
+        "error_list = []\n",
+        "\n",
+        "for id in tqdm(sorted(os.listdir(zip_path))):\n",
+        "    if not id.startswith('SS'):\n",
+        "        continue\n",
+        "\n",
+        "    try:\n",
+        "      lv = excel.loc[id, '분류']\n",
+        "    except Exception as e:\n",
+        "      error_list.append({'id':id, 'error': \"excel error\"})\n",
+        "      continue\n",
+        "  \n",
+        "    if '/' in lv: \n",
+        "      lv = lv.replace(\"/\", '_')\n",
+        "\n",
+        "    if 'Lv' not in lv:\n",
+        "      continue\n",
+        "    \n",
+        "    os.system(f\"rm -r {zip_path}/{id}/pdf_page && mv {zip_path}/{id}/{id}.json {final_path}/{lv}/{id}/{id}_2.json && cp {final_path}/{lv}/{id}/{id}.json {final_path}/{lv}/{id}/{id}.json.bak\")\n",
+        "    time.sleep(0.5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "('Lv5', 'SS0318')"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "lv, id"
       ]
     },
     {
