[260108] 문제 검증 코드 추가 및 검증

--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -2,152 +2,43 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "f194c782",
+      "execution_count": 24,
+      "id": "67311ff9",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "============================================================\n",
+            "Multiple Choice 문제 형식 검증 결과\n",
+            "============================================================\n",
+            "전체 multiple-choice 문제 수: 500\n",
+            "options 형식 오류: 0개\n",
+            "answer 형식 오류: 0개\n",
+            "총 오류 문제 수 (중복 제거): 0개\n",
+            "------------------------------------------------------------\n",
+            "\n",
+            "============================================================\n",
+            "[수정 필요 문제 목록 (file_id, tag)]\n",
+            "------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
-        "import os, json\n",
-        "from tools import ONEDRIVE_PATH\n",
+        "import json\n",
+        "from tools.exam.exam_validator import ExamValidator\n",
         "\n",
-        "file_path = os.path.join(ONEDRIVE_PATH, 'data', 'FINAL', '2C', 'Lv3_4', 'SS0163_workbook', 'SS0163.json')\n",
+        "# 시험 데이터 로드\n",
+        "with open('evaluation/eval_data/4_multiple_exam/계산문제_exam.json', 'r', encoding='utf-8') as f:\n",
+        "    exam_data = json.load(f)\n",
         "\n",
-        "with open(file_path, 'r', encoding='utf-8') as f:\n",
-        "    origin = json.load(f)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "6c0d7909",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# page가 105일 때 index 찾기\n",
-        "target_page = \"0375\"  # page는 문자열로 \"0105\" 형식으로 저장되어 있음\n",
+        "# 검증 수행\n",
+        "result = ExamValidator.validate_multiple_choice_format(exam_data)\n",
         "\n",
-        "for idx, content in enumerate(origin['contents']):\n",
-        "    if content.get('page') == target_page:\n",
-        "        print(f\"Index: {idx}\")\n",
-        "        print(f\"Page: {content.get('page')}\")\n",
-        "        print(f\"Chapter: {content.get('chapter')}\")\n",
-        "        break\n",
-        "else:\n",
-        "    print(f\"Page {target_page} not found\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "1b14f75b",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import re\n",
-        "\n",
-        "# 1. '문제로 확인하기' 이후 텍스트 추출\n",
-        "start = origin['contents'][idx]['page_contents'].find(\"문제로 확인하기\")\n",
-        "if start == -1:\n",
-        "    print(\"'문제로 확인하기'를 찾을 수 없습니다.\")\n",
-        "else:\n",
-        "    end = start + len(\"문제로 확인하기\")\n",
-        "    target_text = origin['contents'][idx]['page_contents'][end:]\n",
-        "    original_page_contents = origin['contents'][idx]['page_contents']\n",
-        "    \n",
-        "    # 2. 패턴: 01 질문\\nSolution\\n답변\\n02 질문\\nSolution\\n답변 ...\n",
-        "    # 질문 부분: 여러 줄 가능 (태그 포함 가능), \\nSolution 전까지 (lookahead 사용)\n",
-        "    # 답변 부분: Solution 다음부터 첫 번째 \\n까지만 (한 줄만)\n",
-        "    pattern = r'(?:^|\\n)([0-9]+)\\s+(.*?)(?=\\nSolution)\\nSolution\\n([^\\n]*)'\n",
-        "    \n",
-        "    # 3. 모든 문제 찾기 (전체 텍스트에서 매칭 위치도 함께 찾기)\n",
-        "    matches_with_pos = []\n",
-        "    for match in re.finditer(pattern, target_text, re.DOTALL):\n",
-        "        matches_with_pos.append({\n",
-        "            'match': match,\n",
-        "            'groups': match.groups(),\n",
-        "            'start': match.start(),\n",
-        "            'end': match.end()\n",
-        "        })\n",
-        "    \n",
-        "    print(f\"찾은 문제 개수: {len(matches_with_pos)}\")\n",
-        "    \n",
-        "    # 4. 각 문제를 number, question, answer로 분리하여 저장하고 본문 대치\n",
-        "    # 역순으로 처리하여 인덱스가 꼬이지 않도록 함\n",
-        "    page_contents = original_page_contents\n",
-        "    replacement_positions = []  # (start_pos, end_pos, tag) 저장\n",
-        "    \n",
-        "    for i, match_info in enumerate(matches_with_pos):\n",
-        "        match = match_info['match']\n",
-        "        number = match.group(1).strip()\n",
-        "        question = match.group(2).strip()\n",
-        "        answer = match.group(3).strip()\n",
-        "        \n",
-        "        # 태그 생성\n",
-        "        tag = f\"q_{origin['contents'][idx]['page']:04}_{i+1:04}\"\n",
-        "        \n",
-        "        print(f\"번호: {number}, 태그: {tag}\")\n",
-        "        \n",
-        "        # JSON 구조에 맞게 추가\n",
-        "        q_format = {\n",
-        "            \"tag\": tag,\n",
-        "            \"type\": \"question\",\n",
-        "            \"description\": { \n",
-        "                \"number\": number, \n",
-        "                \"question\": question.replace(\"\\\\'\", \"'\"), \n",
-        "                \"options\": None,\n",
-        "                \"answer\": answer, \n",
-        "                \"explanation\": \"\"\n",
-        "            }, \n",
-        "            \"caption\": [], \n",
-        "            \"file_path\": None, \n",
-        "            \"bbox\": None\n",
-        "        }\n",
-        "        \n",
-        "        origin['contents'][idx]['add_info'].append(q_format)\n",
-        "        \n",
-        "        # 본문에서 대치할 위치 저장 (전체 page_contents 기준)\n",
-        "        # '문제로 확인하기' 이후의 위치를 전체 page_contents 기준으로 변환\n",
-        "        full_start = end + match.start()\n",
-        "        full_end = end + match.end()\n",
-        "        replacement_positions.append((full_start, full_end, tag))\n",
-        "    \n",
-        "    # 역순으로 대치 (뒤에서부터 처리하여 인덱스가 꼬이지 않도록)\n",
-        "    replacement_positions.sort(reverse=True, key=lambda x: x[0])\n",
-        "    \n",
-        "    for full_start, full_end, tag in replacement_positions:\n",
-        "        page_contents = (\n",
-        "            page_contents[:full_start] + \n",
-        "            f\"\\n{{{tag}}}\" + \n",
-        "            page_contents[full_end:]\n",
-        "        )\n",
-        "    \n",
-        "    # 본문 업데이트\n",
-        "    origin['contents'][idx]['page_contents'] = page_contents\n",
-        "    print(f\"\\n본문 대치 완료: {len(replacement_positions)}개 문제를 태그로 대치했습니다.\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "5d8d18b6",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "with open(file_path, 'w', encoding='utf-8') as f:\n",
-        "    json.dump(origin, f, ensure_ascii=False, indent=4)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "db1aed0d",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from tools.data_processing.json_cleaner import JSONCleaner\n",
-        "\n",
-        "cleaner = JSONCleaner()\n",
-        "cleaner.cleanup_file(file_path, create_backup=False)"
+        "# 결과 출력\n",
+        "report = ExamValidator.print_validation_report(result)\n",
+        "print(report)"
       ]
     },
     {
@@ -166,7 +57,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.11.3"
     }
   },
