[260113] 코드 정리 및 Lv1 pdf 이름 변경

--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -76,7 +76,7 @@
       "source": [
         "from tools.core.utils import FileManager\n",
         "\n",
-        "i = 2\n",
+        "i = 1\n",
         "file_manager = FileManager()\n",
         "excel = file_manager.load_excel_metadata(i)"
       ]
@@ -88,8 +88,190 @@
       "outputs": [
         {
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ISBN</th>\n",
+              "      <th>도서명</th>\n",
+              "      <th>출판일</th>\n",
+              "      <th>코퍼스 1분류</th>\n",
+              "      <th>코퍼스 2분류</th>\n",
+              "      <th>비고</th>\n",
+              "      <th>분류</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>관리번호</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>SS0319</th>\n",
+              "      <td>9791163478782</td>\n",
+              "      <td>금융의 현재와 미래</td>\n",
+              "      <td>2020-01-03</td>\n",
+              "      <td>금융</td>\n",
+              "      <td>기초</td>\n",
+              "      <td>시사</td>\n",
+              "      <td>Lv3/4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SS0320</th>\n",
+              "      <td>9788984059900</td>\n",
+              "      <td>요즘 금리 쉬운 경제</td>\n",
+              "      <td>2020-04-27</td>\n",
+              "      <td>금융</td>\n",
+              "      <td>기초</td>\n",
+              "      <td>시사</td>\n",
+              "      <td>Lv3/4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SS0321</th>\n",
+              "      <td>9788960542570</td>\n",
+              "      <td>알기 쉬운 보험 세테크 100% 활용법</td>\n",
+              "      <td>2020-06-23</td>\n",
+              "      <td>보험</td>\n",
+              "      <td>기초</td>\n",
+              "      <td>세무</td>\n",
+              "      <td>Lv3/4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SS0322</th>\n",
+              "      <td>9788957614358</td>\n",
+              "      <td>공정거래 용어사전</td>\n",
+              "      <td>2020-08-10</td>\n",
+              "      <td>금융</td>\n",
+              "      <td>기초</td>\n",
+              "      <td>용어</td>\n",
+              "      <td>Lv2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SS0323</th>\n",
+              "      <td>9791190820660</td>\n",
+              "      <td>1페이지 보험 정리의 기술</td>\n",
+              "      <td>2020-08-28</td>\n",
+              "      <td>보험</td>\n",
+              "      <td>기초</td>\n",
+              "      <td>시사</td>\n",
+              "      <td>Lv3/4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SS0420</th>\n",
+              "      <td>9791138370714</td>\n",
+              "      <td>2025 시대에듀 차량손해사정사 2차 한권으로 끝내기</td>\n",
+              "      <td>2025-04-15</td>\n",
+              "      <td>보험</td>\n",
+              "      <td>수험서</td>\n",
+              "      <td>차량손해사정사</td>\n",
+              "      <td>Lv3/4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SS0421</th>\n",
+              "      <td>9791138392440</td>\n",
+              "      <td>新2025 시대에듀 hoa 재경관리사 전과목 핵심이론+적중문제+기출 동형문제 한권으...</td>\n",
+              "      <td>2025-04-10</td>\n",
+              "      <td>금융</td>\n",
+              "      <td>수험서</td>\n",
+              "      <td>재경관리사</td>\n",
+              "      <td>Lv5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SS0422</th>\n",
+              "      <td>9791138392938</td>\n",
+              "      <td>2025~2026 시대에듀 PASSCODE 증권투자권유자문인력 실제유형 모의고사 4...</td>\n",
+              "      <td>2025-05-10</td>\n",
+              "      <td>증권</td>\n",
+              "      <td>수험서</td>\n",
+              "      <td>투자권유자문인력</td>\n",
+              "      <td>Lv5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SS0423</th>\n",
+              "      <td>9791138394239</td>\n",
+              "      <td>2025~2026 시대에듀 펀드투자권유자문인력 한권으로 끝내기</td>\n",
+              "      <td>2025-05-20</td>\n",
+              "      <td>증권</td>\n",
+              "      <td>수험서</td>\n",
+              "      <td>투자권유자문인력</td>\n",
+              "      <td>Lv5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SS0424</th>\n",
+              "      <td>9791138376969</td>\n",
+              "      <td>2025 시대에듀 사회조사분석사 2급 1차 필기 기출문제 CBT 문제은행</td>\n",
+              "      <td>2024-10-15</td>\n",
+              "      <td>보험</td>\n",
+              "      <td>수험서</td>\n",
+              "      <td>사회조사분석사</td>\n",
+              "      <td>Lv3/4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>106 rows × 7 columns</p>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "Index(['ISBN', '도서명', '출판일', '코퍼스 1분류', '코퍼스 2분류', '비고', '분류'], dtype='object')"
+              "                 ISBN                                                도서명  \\\n",
+              "관리번호                                                                       \n",
+              "SS0319  9791163478782                                         금융의 현재와 미래   \n",
+              "SS0320  9788984059900                                        요즘 금리 쉬운 경제   \n",
+              "SS0321  9788960542570                              알기 쉬운 보험 세테크 100% 활용법   \n",
+              "SS0322  9788957614358                                          공정거래 용어사전   \n",
+              "SS0323  9791190820660                                     1페이지 보험 정리의 기술   \n",
+              "...               ...                                                ...   \n",
+              "SS0420  9791138370714                      2025 시대에듀 차량손해사정사 2차 한권으로 끝내기   \n",
+              "SS0421  9791138392440  新2025 시대에듀 hoa 재경관리사 전과목 핵심이론+적중문제+기출 동형문제 한권으...   \n",
+              "SS0422  9791138392938  2025~2026 시대에듀 PASSCODE 증권투자권유자문인력 실제유형 모의고사 4...   \n",
+              "SS0423  9791138394239                 2025~2026 시대에듀 펀드투자권유자문인력 한권으로 끝내기   \n",
+              "SS0424  9791138376969           2025 시대에듀 사회조사분석사 2급 1차 필기 기출문제 CBT 문제은행   \n",
+              "\n",
+              "              출판일 코퍼스 1분류 코퍼스 2분류        비고     분류  \n",
+              "관리번호                                                \n",
+              "SS0319 2020-01-03      금융      기초        시사  Lv3/4  \n",
+              "SS0320 2020-04-27      금융      기초        시사  Lv3/4  \n",
+              "SS0321 2020-06-23      보험      기초        세무  Lv3/4  \n",
+              "SS0322 2020-08-10      금융      기초        용어    Lv2  \n",
+              "SS0323 2020-08-28      보험      기초        시사  Lv3/4  \n",
+              "...           ...     ...     ...       ...    ...  \n",
+              "SS0420 2025-04-15      보험     수험서   차량손해사정사  Lv3/4  \n",
+              "SS0421 2025-04-10      금융     수험서     재경관리사    Lv5  \n",
+              "SS0422 2025-05-10      증권     수험서  투자권유자문인력    Lv5  \n",
+              "SS0423 2025-05-20      증권     수험서  투자권유자문인력    Lv5  \n",
+              "SS0424 2024-10-15      보험     수험서   사회조사분석사  Lv3/4  \n",
+              "\n",
+              "[106 rows x 7 columns]"
             ]
           },
           "execution_count": 2,
@@ -98,7 +280,61 @@
         }
       ],
       "source": [
-        "excel.columns"
+        "excel"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            " 75%|███████▌  | 160/212 [00:02<00:00, 68.95it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "9788960542297 not in excel\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 212/212 [00:02<00:00, 73.42it/s] \n"
+          ]
+        }
+      ],
+      "source": [
+        "from tqdm import tqdm\n",
+        "import os\n",
+        "\n",
+        "original_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/{i}C/Lv1\"\n",
+        "\n",
+        "for isbn in tqdm(os.listdir(original_path)):\n",
+        "    if not isbn.startswith('9'):\n",
+        "        continue\n",
+        "    isbn = int(os.path.splitext(isbn)[0])\n",
+        "    # break\n",
+        "    if isbn in excel.ISBN.to_list():\n",
+        "        os.system(f\"cd {original_path} && cp {isbn}.pdf {excel[excel['ISBN'] == isbn].index[0]}.pdf\")\n",
+        "        # print(f\"cp {original_path}/{isbn}.pdf {excel[excel['ISBN'] == isbn].index[0]}.pdf\")\n",
+        "    else:\n",
+        "        print(f\"{isbn} not in excel\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "isbn"
       ]
     },
     {
@@ -180,62 +416,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 31/31 [03:00<00:00,  5.83s/it]\n"
-          ]
-        }
-      ],
-      "source": [
-        "import shutil\n",
-        "from tqdm import tqdm\n",
-        "import os, json, time\n",
-        "\n",
-        "zip_path = '/Users/jinym/Downloads/20260103_문제집도서_60권'\n",
-        "final_path = f\"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/{i}C\"\n",
-        "error_list = []\n",
-        "\n",
-        "for id in tqdm(sorted(os.listdir(zip_path))):\n",
-        "    if not id.startswith('SS'):\n",
-        "        continue\n",
-        "\n",
-        "    try:\n",
-        "      lv = excel.loc[id, '분류']\n",
-        "    except Exception as e:\n",
-        "      error_list.append({'id':id, 'error': \"excel error\"})\n",
-        "      continue\n",
-        "  \n",
-        "    if '/' in lv: \n",
-        "      lv = lv.replace(\"/\", '_')\n",
-        "\n",
-        "    if 'Lv' not in lv:\n",
-        "      continue\n",
-        "    \n",
-        "    os.system(f\"rm -r {zip_path}/{id}/pdf_page && mv {zip_path}/{id}/{id}.json {final_path}/{lv}/{id}/{id}_2.json && cp {final_path}/{lv}/{id}/{id}.json {final_path}/{lv}/{id}/{id}.json.bak\")\n",
-        "    time.sleep(0.5)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 25,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "('Lv5', 'SS0318')"
-            ]
-          },
-          "execution_count": 25,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "lv, id"
       ]
@@ -274,43 +457,6 @@
       "source": [
         "import os\n",
         "os.system(\"scp -r yjmoon@oci004:/home/yjmoon/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/8_multiple_exam_+/exam_+_result/* /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/8_multiple_exam_+/exam_+_result\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# for fn, tn, lv in zip(excel_analy['관리번호'], excel_analy['관리번호_new'], excel_analy['분류']):\n",
-        "#     fn = str(fn)\n",
-        "#     if '/' in lv: \n",
-        "#        lv = lv.replace(\"/\", '_')\n",
-        "# #     print(fn, tn, lv)\n",
-        "    \n",
-        "#     dir = os.path.join(pf.FINAL_DATA_PATH, pf.CYCLE_PATH[1], lv)\n",
-        "#     os.system(f'cd {dir} && mv {fn}_low {tn}_low && cd {tn} &&'+f' for file in *{fn}*; do mv \"$file\" \"$'+'{file//'+fn+'/'+tn+'}\"; done')\n",
-        "#     print(os.path.join(dir, fn))\n",
-        "#     # break"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---\n",
-        "\n",
-        "### 개별 처리\n",
-        "- 불필요 페이지 제거\n",
-        "- 오타\n",
-        "- 페이지 머리말/꼬리말"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 전체 돌리기"
       ]
     },
     {
@@ -443,70 +589,6 @@
       "outputs": [],
       "source": [
         "!python tools/data_processing/epubstats.py --cycle 4 --output_file pdf_pages.xlsx"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Lv2 json 전처리"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from tools import ONEDRIVE_PATH\n",
-        "import os, json\n",
-        "\n",
-        "file_path = os.path.join(ONEDRIVE_PATH, 'data', 'FINAL', '4C', 'Lv2', 'SS0425.json')\n",
-        "\n",
-        "with open(file_path, 'r', encoding='utf-8') as f:\n",
-        "    data = json.load(f)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import re\n",
-        "\n",
-        "for d in data:\n",
-        "    # d['content'] = d['content'].replace(str(d['page'])+'\\n', '')\n",
-        "    # d['content'] = d['content'].replace('\\n', ' ').replace(\"[\", \"\\n[\").replace(\"【\", \"\\n【\").replace(\"】\", \"】\\n\")\n",
-        "    # d['content'] = d['content'].replace(\" \\n\", \"\\n\")\n",
-        "    # 한글과 한글 사이의 \\n을 띄어쓰기로 변경 (\\n 뒤에 가./나./다. 오는 경우 제외)\n",
-        "    def replace_func(match, text):\n",
-        "        pos = match.end()\n",
-        "        # \\n 뒤의 한글이 가/나/다이고 그 다음 문자가 .이면 그대로 유지\n",
-        "        if match.group(2) in '가나다' and pos < len(text) and text[pos] == '.':\n",
-        "            return match.group(0)\n",
-        "        return match.group(1) + ' ' + match.group(2)\n",
-        "    \n",
-        "    d['content'] = re.sub(r'([가-힣])\\n([가-힣])', lambda m: replace_func(m, d['content']), d['content'])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "d"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "with open(file_path, 'w', encoding='utf-8') as f:\n",
-        "    json.dump(data, f, ensure_ascii=False, indent=4)"
       ]
     },
     {
